[tool.poetry]
name = "saved_search"
version = "0.1.0"
description = ""
authors = ["Mohammed Salman <m.salman@zinkki.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.14.0"
fastapi = "^0.65.2"
pydantic = {extras = ["email"], version = "^1.8.2"}
email-validator = "^1.1.3"
motor = "^2.4.0"
python-dotenv = "^0.18.0"
beanie = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
